# python_app

./: .pdm-python  mkdocs.yml  mkdocs.yml.tmpl  pyproject.toml  pyproject.toml.tmpl
.devcontainer/: devcontainer.json
.devcontainer/scripts/: postCreate.sh
.github/scripts/: envsubst.sh
.github/workflows/: post-create.yaml
.trunk/: trunk.yaml
docs/: README.md
src/python_app/: app.py
